Sending Email Newsletter function added

--- a/newsfeed/templates/newsfeed/issue_list.html
+++ b/newsfeed/templates/newsfeed/issue_list.html
@@ -1,5 +1,23 @@
-{% for issue in object_list %}
-    <h2><a href="{{ issue.get_absolute_url }}">{{ issue.title }}</a></h2>
-    <p>{{ issue.short_description }}</p>
-    release date: <b>{{ issue.publish_date|date:"D d M Y" }}</b>
-{% endfor %}
+<div>
+    {% for issue in object_list %}
+        <h2><a href="{{ issue.get_absolute_url }}">{{ issue.title }}</a></h2>
+        <p>{{ issue.short_description }}</p>
+        release date: <b>{{ issue.publish_date|date:"D d M Y" }}</b>
+    {% endfor %}
+</div>
+
+<div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ page_obj.number }} of {{ paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+        {% endif %}
+    </span>
+</div>
