Added unsubscribe url to the newsletters

--- a/newsfeed/templates/newsfeed/email/newsletter_email.html
+++ b/newsfeed/templates/newsfeed/email/newsletter_email.html
@@ -21,3 +21,5 @@ publish date: <b>{{ publish_date|date:"D d M Y" }}</b>
         </li>
     {% endfor %}
 </ul>
+
+<a href="{{ site_url }}{{ unsubscribe_url }}" target="_blank">Unsubscribe</a>
