Template basic stucture added

--- a/newsfeed/templates/newsfeed/email/email_verification.html
+++ b/newsfeed/templates/newsfeed/email/email_verification.html
@@ -1,5 +1,11 @@
-<p>Please click on the link bellow to confirm subscription to {{ site_url }}</p>
-
-<a href="{{ site_url }}{{ verification_url }}" target="_blank">Confirm Subscription</a>
-
-Thank You
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Verify Your E-mail Address</title>
+    </head>
+    <body>
+        <p>Please click on the link bellow to confirm subscription to {{ site_url }}</p>
+        <a href="{{ site_url }}{{ verification_url }}" target="_blank">Confirm Subscription</a>
+        Thank You
+    </body>
+</html>
