--- a/newsfeed/templates/newsfeed/issue_detail.html
+++ b/newsfeed/templates/newsfeed/issue_detail.html
@@ -1,23 +1,29 @@
-<h2>Issue #{{ issue.issue_number }}</h2>
+{% extends 'newsfeed/base.html' %}
 
-<h2>{{ issue.title }}</h2>
-<p>{{ issue.short_description }}</p>
-publish date: <b>{{ issue.publish_date|date:"D d M Y" }}</b>
+{% block head_title %}Issue #{{ issue.issue_number }}{% endblock %}
 
-{% regroup object_list|dictsort:"category.order" by category as category_list %}
+{% block content %}
+    <h1>Issue #{{ issue.issue_number }}</h1>
 
-<ul>
-    {% for category, posts in category_list %}
-        <li><h4>{{ category }}</h4>
-        <ul>
-            {% for post in posts %}
-                <li>
-                    <h5><a href="{{ post.source_url }}" target="_blank">{{ post.title }}</a></h5>
-                    <p>{{ post.short_description }}</p>
-                    <p>{{ post.category.name }}</p>
-                </li>
-            {% endfor %}
-        </ul>
-        </li>
-    {% endfor %}
-</ul>
+    <h3>{{ issue.title }}</h3>
+    <p>{{ issue.short_description }}</p>
+    publish date: <b>{{ issue.publish_date|date:"D d M Y" }}</b>
+
+    {% regroup object_list|dictsort:"category.order" by category as category_list %}
+
+    <ul>
+        {% for category, posts in category_list %}
+            <li><h4>{{ category }}</h4>
+            <ul>
+                {% for post in posts %}
+                    <li>
+                        <h5><a href="{{ post.source_url }}" target="_blank">{{ post.title }}</a></h5>
+                        <p>{{ post.short_description }}</p>
+                        <p>{{ post.category.name }}</p>
+                    </li>
+                {% endfor %}
+            </ul>
+            </li>
+        {% endfor %}
+    </ul>
+{% endblock %}
