--- a/newsfeed/templates/newsfeed/newsletter_subscription_confirm.html
+++ b/newsfeed/templates/newsfeed/newsletter_subscription_confirm.html
@@ -1,5 +1,23 @@
-{% if subscribed %}
-    subscription confirmed!
-{% else %}
-    subscription failed!
-{% endif %}
+{% extends 'newsfeed/base.html' %}
+{% load static %}
+
+{% block head_title %}Confirm Subscription{% endblock %}
+
+{% block head_extra %}
+    <script type="text/javascript" src="{% static 'newsfeed/js/newsletter_subscription.js' %}"></script>
+{% endblock %}
+
+{% block content %}
+    {% if subscribed %}
+        Subscription confirmed!
+    {% else %}
+        Subscription confirmation has link expired or is invalid.
+        Please click on the button below to get e-mail with a new confirmation link.
+        <form method="post" id="subscriptionForm" data-url="{% url 'newsfeed:newsletter_subscribe' %}">
+            {% csrf_token %}
+            <input type="hidden" name="email_address" required id="id_email_address" value="{{ object.email_address }}">
+            <button type="submit">Try Again</button>
+        </form>
+        <div id="subscriptionMessage"></div>
+    {% endif %}
+{% endblock %}
