Added support for multiple subscription form per page

--- a/newsfeed/templates/newsfeed/newsletter_subscribe.html
+++ b/newsfeed/templates/newsfeed/newsletter_subscribe.html
@@ -3,10 +3,9 @@
 
 {% block head_title %}Subscribe{% endblock %}
 
-{% block head_extra %}
-    <script type="text/javascript" src="{% static 'newsfeed/js/newsletter_subscription.js' %}"></script>
-{% endblock %}
-
 {% block content %}
     {% include 'newsfeed/subscription_form.html' with form=form form_type='subscribe' %}
+{% endblock %}
+{% block footer_extra %}
+    <script type="text/javascript" src="{% static 'newsfeed/js/newsletter_subscription.js' %}"></script>
 {% endblock %}
