--- a/newsfeed/templates/newsfeed/subscription_form.html
+++ b/newsfeed/templates/newsfeed/subscription_form.html
@@ -1,15 +1,6 @@
-<form method="post"
-    id="subscriptionForm"
-    data-url="
-        {% if form_type == 'subscribe' %}
-            {% url 'newsfeed:newsletter_subscribe' %}
-        {% else %}
-            {% url 'newsfeed:newsletter_unsubscribe' %}
-        {% endif %}
-    ">
-
+<form method="post" class="subscriptionForm" action="{% if form_type == 'subscribe' %}{% url 'newsfeed:newsletter_subscribe' %}{% else %}{% url 'newsfeed:newsletter_unsubscribe' %}{% endif %}">
     {% csrf_token %}
     {{ form }}
     <button type="submit">{% if form_type == 'subscribe' %}Subscribe{% else %}Unsubscribe{% endif %}</button>
+    <div class="subscriptionMessage"></div>
 </form>
-<div id="subscriptionMessage"></div>
