latest issue view added

--- a/newsfeed/templates/newsfeed/email/newsletter_email.html
+++ b/newsfeed/templates/newsfeed/email/newsletter_email.html
@@ -9,23 +9,7 @@
         <p>{{ issue.short_description }}</p>
         <p>publish date: {{ issue.publish_date|date:"D d M Y" }}</p>
 
-        {% regroup post_list|dictsort:"category.order" by category as category_list %}
-
-        <ul>
-            {% for category, posts in category_list %}
-                <li><h4>{{ category }}</h4>
-                <ul>
-                    {% for post in posts %}
-                        <li>
-                            <h5><a href="{{ post.source_url }}" target="_blank">{{ post.title }}</a></h5>
-                            <p>{{ post.short_description }}</p>
-                            <p>{{ post.category.name }}</p>
-                        </li>
-                    {% endfor %}
-                </ul>
-                </li>
-            {% endfor %}
-        </ul>
+        {% include 'newsfeed/issue_posts.html' with posts=post_list %}
 
         <a href="{{ site_url }}{{ unsubscribe_url }}" target="_blank">Unsubscribe</a>
     </body>
