--- a/newsfeed/templates/newsfeed/issue_detail.html
+++ b/newsfeed/templates/newsfeed/issue_detail.html
@@ -9,21 +9,5 @@
     <p>{{ issue.short_description }}</p>
     publish date: <b>{{ issue.publish_date|date:"D d M Y" }}</b>
 
-    {% regroup object_list|dictsort:"category.order" by category as category_list %}
-
-    <ul>
-        {% for category, posts in category_list %}
-            <li><h4>{{ category }}</h4>
-            <ul>
-                {% for post in posts %}
-                    <li>
-                        <h5><a href="{{ post.source_url }}" target="_blank">{{ post.title }}</a></h5>
-                        <p>{{ post.short_description }}</p>
-                        <p>{{ post.category.name }}</p>
-                    </li>
-                {% endfor %}
-            </ul>
-            </li>
-        {% endfor %}
-    </ul>
+    {% include 'newsfeed/issue_posts.html' with posts=object_list %}
 {% endblock %}
