--- a/newsfeed/templates/newsfeed/newsletter_unsubscribe.html
+++ b/newsfeed/templates/newsfeed/newsletter_unsubscribe.html
@@ -3,10 +3,10 @@
 
 {% block head_title %}Unsubscribe{% endblock %}
 
-{% block head_extra %}
-    <script type="text/javascript" src="{% static 'newsfeed/js/newsletter_subscription.js' %}"></script>
-{% endblock %}
-
 {% block content %}
     {% include 'newsfeed/subscription_form.html' with form=form form_type='unsubscribe' %}
+{% endblock %}
+
+{% block footer_extra %}
+    <script type="text/javascript" src="{% static 'newsfeed/js/newsletter_subscription.js' %}"></script>
 {% endblock %}
